@@ -1,3 +1,6 @@
+[CW30]
++ Add the EncodedSyncPData dialog.
+
 [CW28]
 * Cherry-pick Ford's changes: generate test error report with actual and expected responses.
 
